state marker sub

--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -103,7 +103,7 @@ The user needs to select the data to use (before or after normalisation) to visu
   # Define type of markers
   daf_type <- daf[SingleCellExperiment::rowData(daf)$marker_class=="type", ]
   daf_state <- daf[SingleCellExperiment::rowData(daf)$marker_class=="state", ]
-  sub_daf_state <- daf_type[, sample(ncol(daf_state), n_subset_marker_specific)]
+  sub_daf_state <- daf_state[, sample(ncol(daf_state), n_subset_marker_specific)]
   sub_daf_type <- daf_type[, sample(ncol(daf_type), n_subset_marker_specific)]
   # Define batch
   batch_ids <- is.factor(rep(md$batch, nrow(daf)))
