--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -63,9 +63,9 @@ We provided an example dataset to help you prepare your data. The command below 
   write_xlsx(x=CytofRUV::panel,path = file.path(wd_data,"Panel.xlsx"))
 ```
 
-## Loading datasets
+## Loading datasets and clustering
 
-The first step is to load the metadata file, all the .fcs files, the panel file from the dataset. The user needs to define the working directory as well as the filename of the metadata file and the panel file. Once the dataset is loaded it will then cluster all the data. The user needs to provide the number of clusters to be used for this dataset.
+The first step is to load the metadata file, all the .fcs files, the panel file from the dataset. The user needs to define the working directory as well as the filename of the metadata file and the panel file. Once the dataset is loaded, after applying an arcsinh transformation (cofactor 5), all the data will be clustered. The user needs to provide the number of clusters to be used for this dataset.
 
 ```{r load and cluster data before CytofRUV normalisation}
   ## Define parameters to load and cluster the data
@@ -138,7 +138,7 @@ The user needs to select the data to use (before or after normalisation) to visu
 
 ## CytofRUV normalisation procedure
 
-The normalize_data function allow the user to adjust for batch effects with parameter settings for the CytofRUV algorithm to be selected by user, such as the replicated samples to use, the clusters to be nornmalised and the value of k. The user can specify below the name of the directory to save the normalised data (dir_name_norm_data) or use the get_directory function which will ask the user to specify the directory.
+TThe normalize_data function allow the user to adjust for batch effects with parameter settings for the CytofRUV algorithm, such as which replicated samples to use and the value of k. The user can specify below the name of the directory to save the normalised data (dir_name_norm_data) or use the get_directory function which will ask the user to specify the directory. The normalised files and the metadata and panel files will be save into the specified directory.
 
 ```{r CytofRUV normalisation}
 #dir_name_norm_data = get_directory()
@@ -155,6 +155,8 @@ normalise_data(data=data,raw_data=raw_data,rep_samples=rep_samples, norm_cluster
 ```
 
 ## Loading and clustering the data after CytofRUV normalisation
+
+The first step is to load the metadata file, all the .fcs files, the panel file from the dataset. The user needs to define the working directory as well as the filename of the metadata file and the panel file. Once the dataset is loaded, after applying an arcsinh transformation (cofactor 5), all the data will be clustered. The user needs to provide the number of clusters to be used for this dataset.
 
 ```{r load and cluster data after CytofRUV normalisation}
   ## Define parameters to load and cluster the data
