--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -39,6 +39,12 @@ library(shinyjs)
 library(shinydashboard)
 library(writexl)
 library(ComplexHeatmap)
+
+# For the downloaded extra funcs for exprsHeatmap
+library(data.table)
+library(dplyr)
+library(S4Vectors)
+library(pals)
 ```
 
 ## Dataset
@@ -132,7 +138,6 @@ The user needs to select the data to use (before or after normalisation) to visu
   panel=data$panel
   
   CytofRUV::launch_Shiny()
-  
   
 ```
 
