Moved percentageSubset function argument from load_data() to launch_Shiny.
Removed Logical Bug where double subsampling was occuring for the Distribution Plot!

--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -166,41 +166,24 @@ The R-shiny interface can also be used to visualise the normalised data.
 
 ``` {r Shiny App on the normalised data,eval=FALSE}
   ## Define parameters to use for R-Shiny
-  daf=norm_data$daf
-  md=norm_data$md
+  daf=data$daf
+  md=data$md
   seed=1234
-  # Number of cells for diagnostic plots marker specific
-  n_subset_marker_specific <- 10000
-
-  # Define type of markers
-  daf_type <- daf[SingleCellExperiment::rowData(daf)$marker_class=="type", ]
-  daf_state <- daf[SingleCellExperiment::rowData(daf)$marker_class=="state", ]
-  sub_daf_state <- daf_state[, sample(ncol(daf_state), n_subset_marker_specific)]
-  sub_daf_type <- daf_type[, sample(ncol(daf_type), n_subset_marker_specific)]
-  # Define batch
-  batch_ids <- is.factor(rep(md$batch, nrow(daf)))
-  sampleID_sorted <- md$sample_id[order(md$patient_id)]
   
-  ## Running Dimension Reduction -> TSNE & UMAP
+  # Running Dimension Reduction -> TSNE & UMAP
   set.seed(seed)
+  
   # Number of cells for tSNE plots marker specific
   TSNE_subset <- 2000
   print("Running TSNE")
-  daf <- runDR(daf, "TSNE", cells = TSNE_subset)
+  daf <- CATALYST::runDR(daf, dr = "TSNE", cells = TSNE_subset)
   
   # Number of cells for UMAP plots marker specific
-  UMAP_subset <- 2500
+  UMAP_subset <- 2000
   print("Running UMAP")
   daf <- runDR(daf, "UMAP", cells = UMAP_subset)
   
-  # Launch Shiny
-  # For a subset of the data, define the number of cells for diagnostic plots
-  n_subset <- 5000
-  sub_daf <- daf[, sample(ncol(daf), n_subset)]
-  
-  # # For the full dataset: 
-  # sub_daf <- daf
-  
+  ## Launch Shiny
   panel=data$panel
   
   CytofRUV::launch_Shiny(daf)
