--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -114,11 +114,7 @@ The user needs to select the data to use (before or after normalisation) to visu
   daf <- runDR(daf, "UMAP", cells = UMAP_subset)
   
   ## Launch Shiny
-<<<<<<< HEAD
-=======
   sub_daf <- daf[, sample(ncol(daf), subset_percentage*sample(ncol(daf)))]
-  
->>>>>>> Rebased Onto Develop, Merge Conflict Resolved
   panel=data$panel
   
   CytofRUV::launch_Shiny(daf)
@@ -169,8 +165,8 @@ The R-shiny interface can also be used to visualise the normalised data.
 
 ``` {r Shiny App on the normalised data,eval=FALSE}
   ## Define parameters to use for R-Shiny
-  daf=data$daf
-  md=data$md
+  daf=norm_data$daf
+  md=norm_data$md
   seed=1234
   
   # Running Dimension Reduction -> TSNE & UMAP
@@ -179,10 +175,10 @@ The R-shiny interface can also be used to visualise the normalised data.
   # Number of cells for tSNE plots marker specific
   TSNE_subset <- 2000
   print("Running TSNE")
-  daf <- CATALYST::runDR(daf, dr = "TSNE", cells = TSNE_subset)
+  daf <- runDR(daf, "TSNE", cells = TSNE_subset)
   
   # Number of cells for UMAP plots marker specific
-  UMAP_subset <- 2000
+  UMAP_subset <- 2500
   print("Running UMAP")
   daf <- runDR(daf, "UMAP", cells = UMAP_subset)
   
