--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -117,6 +117,7 @@ The user needs to select the data to use (before or after normalisation) to visu
   sub_daf <- daf[, sample(ncol(daf), subset_percentage*sample(ncol(daf)))]
   panel=data$panel
   
+  CytofRUV::launch_Shiny(subset_percentage=100)
   CytofRUV::launch_Shiny(daf)
 ```
 
@@ -185,5 +186,6 @@ The R-shiny interface can also be used to visualise the normalised data.
   ## Launch Shiny
   panel=data$panel
   
+  CytofRUV::launch_Shiny(subset_percentage=100)
   CytofRUV::launch_Shiny(daf)
 ```
