--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -273,9 +273,44 @@ k=c(5,10,15)
 filter_patients = c("LL1_B1","LL2_B1","LL3_B1")
 
 x_axis_name="CLL" # replace with merely filter_patients, assume correct input.
-                                  cols=c("raw"="black","batchadj"="indianred4","cytonorm"="darkmagenta","cytofruv_k1"="#084081","cytofruv_k3"="#0868AC","cytofruv_k5"="#2B8CBE","cytofruv_k7"="#4EB3D3","cytofruv_k10"="#7BCCC4","cytofruv_k12"= "#A8DDB5","cytofruv_k15"="darkgreen","cytofruv_k20"="seagreen","cytofruv_k25"="yellowgreen")
+                      
+# doesnt need to be declared.
+cols=c("raw"="black","batchadj"="indianred4","cytonorm"="darkmagenta","cytofruv_k1"="#084081","cytofruv_k3"="#0868AC","cytofruv_k5"="#2B8CBE","cytofruv_k7"="#4EB3D3","cytofruv_k10"="#7BCCC4","cytofruv_k12"= "#A8DDB5","cytofruv_k15"="darkgreen","cytofruv_k20"="seagreen","cytofruv_k25"="yellowgreen")
 
 
 plotHellingerDistance(daf, raw_dist_dir, method_names, data_dir, k, filter_patients, x_axis_name, cols)
 ```
 
+### Sihlouette Distance Plot 
+
+```{r}
+### Dataset from CLL+HC samples with 20 clusters
+
+# Only CLL samples.
+outdir="/stornext/Home/data/allstaff/t/trussart.m/R_scripts/RUV_design_experiment/RUV1b_RUV3b/Metrics_of_performances_all_methods/All_samples_DG23_VDBR996_anchor_CytofPackage_new_trial/"
+my_dir="/stornext/Bioinf/data/lab_speed/Marie/RUV_experiment_design/Norm_Raw_RUV1b_RUV3b_simult/CytofRUV/"
+
+## Raw file with Silhouette for all samples
+silh_fink_dir=paste0(my_dir,"CytofRUV_Norm_data_CLL2_HC1_all_cl_20_k5/Sil_all_samples_all_clust_raw_data_over_ss.rds")
+
+batchadj_dir="/stornext/Bioinf/data/lab_speed/Marie/RUV_experiment_design/Norm_Raw_RUV1b_RUV3b_simult/BatchAdjust/BatchAdjust_95p_and_DG23_new_trial/Sil_all_samples_all_clust_norm_data_over_ss.rds"
+
+
+cytofRUV_dir=list(
+  paste0(my_dir,"CytofRUV_Norm_data_CLL2_HC1_all_cl_20_k5/Sil_all_samples_all_clust_norm_data_over_ss.rds"),
+  paste0(my_dir,"CytofRUV_Norm_data_CLL2_HC1_all_cl_20_k10/Sil_all_samples_all_clust_norm_data_over_ss.rds"),
+  paste0(my_dir,"CytofRUV_Norm_data_CLL2_HC1_all_cl_20_k15/Sil_all_samples_all_clust_norm_data_over_ss.rds")
+)
+
+data_dir=list(batchadj_dir, cytofRUV_dir)
+
+method_names<-c("batchadj", "cytofruv")
+
+k<-c(5,10,15)
+filter_patients<-c("DG23","DG33","DG27")
+x_axis_name<-"CLL"
+                                  cols=c("raw"="black","batchadj"="indianred4","cytonorm"="darkmagenta","cytofruv_k1"="#084081","cytofruv_k3"="#0868AC","cytofruv_k5"="#2B8CBE","cytofruv_k7"="#4EB3D3","cytofruv_k10"="#7BCCC4","cytofruv_k12"= "#A8DDB5","cytofruv_k15"="darkgreen","cytofruv_k20"="seagreen","cytofruv_k25"="yellowgreen")
+
+
+plotSilhouette(raw_dir, silh_fink_dir, data_dir, method_names, k, filter_patients, x_axis_name, cols)
+```
