--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -81,7 +81,9 @@ The first step is to load the metadata file, all the .fcs files, the panel file 
   clusters_nb=20
 
   ## Loading the data
-  data=load_data(wd_data,metadata_filename,panel_filename,cofactor=NULL)
+  data=load_data(wd_data,metadata_filename,panel_filename)
+  log_data=load_data(wd_data,metadata_filename,panel_filename,cofactor=NULL)
+  log_daf <- log_data$daf
   
   ## Cluster the data
   data$daf=cluster_data(data$daf,seed,markers_to_use=data$lineage_markers,clusters_nb)
@@ -125,7 +127,7 @@ The user needs to select the data to use (before or after normalisation) to visu
   
   panel=data$panel
   
-  CytofRUV::launch_Shiny(daf)
+  CytofRUV::launch_Shiny(daf, log_daf)
 ```
 
 ## CytofRUV normalisation procedure
@@ -159,7 +161,8 @@ The first step is to load the metadata file, all the .fcs files, the panel file 
   clusters_nb=20
 
   ## Loading the data
-  norm_data=load_data(wd_norm,metadata_norm_filename,panel_norm_filename,cofactor = NULL)
+  norm_data=load_data(wd_norm,metadata_norm_filename,panel_norm_filename,cofactor = NULL) 
+  log_daf <- log_data$norm_data
 
   ## Cluster the data
   norm_data$daf=cluster_data(norm_data$daf,seed,markers_to_use=norm_data$lineage_markers,clusters_nb)
@@ -210,5 +213,5 @@ The R-shiny interface can also be used to visualise the normalised data.
   
   panel=data$panel
   
-  CytofRUV::launch_Shiny(daf)
+  CytofRUV::launch_Shiny(daf, log_daf)
 ```
