--- a/vignettes/Introduction_to_CytofRUV.Rmd
+++ b/vignettes/Introduction_to_CytofRUV.Rmd
@@ -22,7 +22,26 @@ CytofRUV is a computational algorithm which permits the integration of data acro
 
 We provided an example of a set of data that included all .fcs, a metadata file a and panel file in the inst/extdata. First of all we need to load all the packages.
 
-```{r setup}
+```{r setup, include=FALSE, cache = FALSE}
+require("knitr")
+## setting working directory
+output_dir="CytofRUV_output"
+  if (!dir.exists(output_dir)){
+    dir.create(output_dir)
+  }
+  wd_data=file.path(getwd(),output_dir)
+
+knitr::opts_chunk$set(echo = FALSE
+                      , comment = NA
+                      , warning = FALSE
+                      , error = FALSE
+                      , message = FALSE
+                      , tidy = TRUE)
+
+knitr::opts_knit$set(root.dir = wd_data)
+```
+
+```{r lib}
 library(CytofRUV)
 library(CATALYST)
 library(flowCore)
